fixed wrap

--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,36 @@
 #root {
-  max-width: 1280px;
+  max-width: 1400px;
   margin: 0 auto;
-  font-size: 1rem;
-  padding-inline: 1rem;
-  padding-block: 1rem;
+  padding-inline: 1em;
+  padding-block: 1em;
+  width: 90%;
 
+}
+
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+
+.App {
+  max-width: 100%;
 }
 
 
 
 .container {
-
-  width: 90%;
+  width: 100%;
+  font-size: 1em;
 }
 
 .flex {
   display: flex;
-  gap: 4rem;
+  flex-wrap: wrap;
+  gap: 5rem;
 }
 
 .sm {
@@ -33,6 +47,7 @@
 
 .buttonContainer {
   padding-block: 1rem;
+
 
 }
 
@@ -55,7 +70,7 @@
 }
 
 button {
-
+  font-size: 1rem;
   padding: .7rem 0rem;
   font-weight: bold;
   border-radius: 10px;
@@ -109,7 +124,7 @@ button {
 
 
 code {
-  white-space: nowrap
+  white-space: nowrap;
 }
 
 
